--- a/lang/cachify.pot
+++ b/lang/cachify.pot
@@ -1,120 +1,143 @@
-# Loco Gettext template
-#, fuzzy
+# Copyright (C) 2015 pluginkollektiv
+# This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Cachify\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Cachify 2.2.3\n"
+"Report-Msgid-Bugs-To: https://pascalbirchler.com\n"
 "POT-Creation-Date: \n"
-"POT-Revision-Date: Tue Aug 18 2015 14:59:23 GMT+0200 (CEST)\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Sergej Müller\n"
-"Language-Team: Sergej Müller\n"
-"Language: \n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
-"__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
-"_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
-"esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
-"esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
-"X-Poedit-Basepath: .\n"
-"X-Generator: Loco - https://localise.biz/\n"
-"X-Poedit-SearchPath-0: ."
+"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Pascal Birchler\n"
+"Language-Team: Pascal Birchler <pascal@required.ch>\n"
+"X-Generator: grunt-wp-i18n 0.5.3\n"
+"X-Poedit-KeywordsList: "
+"__;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_"
+"attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c;\n"
+"Language: en\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Country: Switzerland\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 
-#: ../inc/cachify.class.php:650
+#: inc/cachify.class.php:576
+msgid "Settings"
+msgstr ""
+
+#: inc/cachify.class.php:648
 msgid "Caching method"
 msgstr ""
 
-#: ../inc/cachify.class.php:652
+#: inc/cachify.class.php:650
 msgid "Empty"
 msgstr ""
 
-#: ../inc/cachify.class.php:719
+#: inc/cachify.class.php:717
 msgid "Flush the cachify cache"
 msgstr ""
 
-#: ../inc/cachify.class.php:832
+#: inc/cachify.class.php:830
 msgid "Cachify cache is flushed."
 msgstr ""
 
-#: ../inc/cachify.class.php:1485
+#: inc/cachify.class.php:1483
 msgid "Total cache"
 msgstr ""
 
-#: ../inc/cachify.class.php:1486
+#: inc/cachify.class.php:1484
 msgid "Page cache"
 msgstr ""
 
-#: ../inc/cachify.class.php:1516
+#: inc/cachify.class.php:1514
 msgid "Remove"
 msgstr ""
 
-#: ../inc/cachify.class.php:1561
-msgid "Database"
+#: inc/cachify.class.php:1516
+msgid "Edit"
 msgstr ""
 
-#: ../inc/cachify.class.php:1563
-msgid "Hard disk"
+#: inc/cachify.class.php:1518
+msgid "OK"
 msgstr ""
 
-#: ../inc/cachify.class.php:1598
-msgid "No minify"
+#: inc/cachify.class.php:1519
+msgid "Cancel"
 msgstr ""
 
-#: ../inc/cachify.class.php:1669
-msgid "The server configuration file (e.g. .htaccess) needs to be adjusted"
-msgstr ""
-
-#: ../inc/cachify.class.php:1717
-msgid "Cache method"
-msgstr ""
-
-#: ../inc/cachify.class.php:1732
-msgid "Cache expiration"
-msgstr ""
-
-#: ../inc/cachify.class.php:1737
-msgid "Hours"
-msgstr ""
-
-#: ../inc/cachify.class.php:1744
-msgid "Cache generation"
-msgstr ""
-
-#: ../inc/cachify.class.php:1750
-msgid "No cache generation by logged in users"
-msgstr ""
-
-#: ../inc/cachify.class.php:1757
-msgid "Flush the cache at new comments"
-msgstr ""
-
-#: ../inc/cachify.class.php:1765
-msgid "Cache exceptions"
-msgstr ""
-
-#: ../inc/cachify.class.php:1786
-msgid "Cache minify"
-msgstr ""
-
-#: ../inc/cachify.class.php:1806
-msgid "Manual"
-msgstr ""
-
+#. Plugin Name of the plugin/theme
 msgid "Cachify"
 msgstr ""
 
-msgid "Easy to use WordPress caching plugin. Serving static blog pages from Database, Hard Disc, Memcached or APC."
+#: inc/cachify.class.php:1559
+msgid "Database"
 msgstr ""
 
+#: inc/cachify.class.php:1561
+msgid "Hard disk"
+msgstr ""
+
+#: inc/cachify.class.php:1596
+msgid "No minify"
+msgstr ""
+
+#: inc/cachify.class.php:1667
+msgid "The server configuration file (e.g. .htaccess) needs to be adjusted"
+msgstr ""
+
+#: inc/cachify.class.php:1715
+msgid "Cache method"
+msgstr ""
+
+#: inc/cachify.class.php:1730
+msgid "Cache expiration"
+msgstr ""
+
+#: inc/cachify.class.php:1735
+msgid "Hours"
+msgstr ""
+
+#: inc/cachify.class.php:1742
+msgid "Cache generation"
+msgstr ""
+
+#: inc/cachify.class.php:1748
+msgid "No cache generation by logged in users"
+msgstr ""
+
+#: inc/cachify.class.php:1755
+msgid "Flush the cache at new comments"
+msgstr ""
+
+#: inc/cachify.class.php:1763
+msgid "Cache exceptions"
+msgstr ""
+
+#: inc/cachify.class.php:1784
+msgid "Cache minify"
+msgstr ""
+
+#: inc/cachify.class.php:1804
+msgid "Manual"
+msgstr ""
+
+#. Plugin URI of the plugin/theme
+msgid "https://wordpress.org/plugins/cachify"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid ""
+"Easy to use WordPress caching plugin. Serving static blog pages from "
+"database, disk, Memcached or APC."
+msgstr ""
+
+#. Author of the plugin/theme
 msgid "pluginkollektiv"
 msgstr ""
 
+#. Author URI of the plugin/theme
 msgid "http://pluginkollektiv.org"
-msgstr ""
-
-msgid "https://wordpress.org/plugins/cachify/"
 msgstr ""
